feat: Normalizar notebooks y añadir análisis agrícola
- **Estandarización de Notebooks**: Se normalizaron todos los encabezados a estilo oración, respetando nombres propios como 'Google Earth Engine' y 'Sentinel-1'. Se limpió el formato de los textos en celdas Markdown para mejorar la legibilidad.

- **Consolidación de Referencias**: Todas las secciones de referencias bibliográficas fueron unificadas y movidas al final de cada notebook bajo un único encabezado.

- **Análisis Agrícola**: Se incorpora un análisis formal sobre la predominancia del riego en el segundo semestre en los Llanos Orientales, validando el enfoque metodológico del proyecto.

--- a/01_preparacion_datos.ipynb
+++ b/01_preparacion_datos.ipynb
@@ -2,17 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "ac814b05",
    "metadata": {},
    "source": [
-    "# Detección de Cambios con Sentinel-1 en Municipios de Casanare y Meta\n",
     "## Parte 1: Preparación de Datos y Definición del Área de Estudio\n",
     "\n",
     "### Introducción\n",
-    "\n",
     "Este proyecto implementa metodologías de detección de cambios usando imágenes Sentinel-1 SAR para identificar cambios potenciales asociados a actividad agrícola en municipios seleccionados de los departamentos de Casanare y Meta, Colombia [1]. La detección de cambios mediante radar de apertura sintética (SAR) ofrece ventajas significativas sobre sensores ópticos, particularmente en regiones tropicales con cobertura nubosa frecuente [2].\n",
     "\n",
-    "### Área de Estudio\n",
-    "\n",
+    "### Área de estudio\n",
     "Los municipios seleccionados corresponden a zonas de importancia agrícola en la región de la Orinoquía colombiana:\n",
     "\n",
     "**Departamento del Meta:**\n",
@@ -29,27 +27,16 @@
     "- Villanueva\n",
     "\n",
     "### Metodología\n",
-    "\n",
-    "Este notebook implementa la primera fase del procesamiento siguiendo la metodología propuesta por Canty et al. [3] para análisis estadístico de cambios en series temporales de Sentinel-1 en Google Earth Engine. Los datos SAR de polarización dual (VV y VH) serán utilizados para detectar cambios estadísticamente significativos en la superficie terrestre.\n",
-    "\n",
-    "---\n",
-    "\n",
-    "### Referencias\n",
-    "\n",
-    "[1] M. J. Canty, A. A. Nielsen, H. Skriver, and K. Conradsen, \"Statistical analysis of changes in Sentinel-1 time series on the Google Earth Engine,\" *Remote Sens.*, vol. 12, no. 1, p. 46, Jan. 2020, doi: 10.3390/rs12010046.\n",
-    "\n",
-    "[2] A. Reiche et al., \"Combining satellite data for better tropical forest monitoring,\" *Nat. Clim. Change*, vol. 6, pp. 120–122, Feb. 2016, doi: 10.1038/nclimate2919.\n",
-    "\n",
-    "[3] M. J. Canty, *Image Analysis, Classification and Change Detection in Remote Sensing, with Algorithms for Python*, 4th ed. Boca Raton, FL: CRC Press, 2019.\n",
-    "\n",
-    "[4] \"Detecting changes in Sentinel-1 imagery,\" Google Earth Engine Tutorials. [Online]. Available: https://developers.google.com/earth-engine/tutorials/community/detecting-changes-in-sentinel-1-imagery-pt-1"
+    "Este notebook implementa la primera fase del procesamiento siguiendo la metodología propuesta por Canty et al. [3] para análisis estadístico de cambios en series temporales de Sentinel-1 en Google Earth Engine. Los datos SAR de polarización dual (VV y VH) serán utilizados para detectar cambios estadísticamente significativos en la superficie terrestre."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. Instalación y Carga de Librerías"
+    "## 1. Instalación y carga de librerías\n",
+    "\n",
+    "Trabaja dentro de un entorno virtual dedicado para mantener controladas las dependencias del proyecto. Activa el entorno y asegúrate de que las bibliotecas de análisis geoespacial, visualización y la API de Google Earth Engine estén instaladas antes de ejecutar las celdas. Estas herramientas permiten replicar los ejercicios de cambio multitemporal descritos en el tutorial oficial [4]. Importa los módulos siguiendo el orden estándar → científicos → geoespaciales → visualización para que cualquiera identifique las dependencias de un vistazo."
    ]
   },
   {
@@ -78,7 +65,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. Inicialización de Google Earth Engine"
+    "## 2. Inicialización de Google Earth Engine\n",
+    "\n",
+    "Earth Engine es el motor que nos permite descargar y procesar las imágenes Sentinel-1. Usa el bloque `try/except` que llama primero a `ee.Initialize()` y, si falla, ejecuta `ee.Authenticate()` seguido de `ee.Initialize()`. Este patrón evita interrupciones cuando la sesión expira y es el que recomienda el tutorial de cambios con Sentinel-1 [4]."
    ]
   },
   {
@@ -102,7 +91,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. Carga de la Capa de Municipios"
+    "## 3. Carga de la capa de municipios\n",
+    "\n",
+    "Abrimos el GeoPackage oficial del DANE 2023 (`MGN_MPIO_POLITICO`) para trabajar con límites municipales recientes. Este archivo contiene los nueve municipios seleccionados en Casanare y Meta, que representan la diversidad agrícola de los Llanos Orientales según los reportes estadísticos del sector [5]."
    ]
   },
   {
@@ -127,7 +118,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4. Selección de Municipios de Interés"
+    "## 4. Selección de municipios de interés\n",
+    "\n",
+    "Filtra la capa con los códigos DANE de cada municipio y guarda la lista en una variable clara (`municipios_objetivo`). Esta lista sirve para repetir el análisis cuando se actualicen los datos y facilita que otros revisen la configuración sin buscar manualmente los filtros."
    ]
   },
   {
@@ -189,7 +182,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5. Reproyección y Preparación de Geometrías"
+    "## 5. Reproyección y preparación de geometrías\n",
+    "\n",
+    "Convierte el GeoDataFrame a WGS84 (EPSG:4326) antes de crear objetos de Earth Engine. Esta proyección es el punto de encuentro para la mayoría de los catálogos satelitales y garantiza que las geometrías coincidan con las imágenes Sentinel-1 descritas en el manual de la misión [6]."
    ]
   },
   {
@@ -221,7 +216,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6. Conversión a Geometría de Earth Engine"
+    "## 6. Conversión a geometría de Earth Engine\n",
+    "\n",
+    "Transforma las geometrías del GeoDataFrame en una `ee.FeatureCollection`. De esta forma, cualquier notebook o script puede reconstruir la misma zona de estudio directamente desde los archivos en `data/`, sin depender de pasos manuales."
    ]
   },
   {
@@ -272,7 +269,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 7. Definición de Parámetros Temporales"
+    "## 7. Definición de parámetros temporales\n",
+    "\n",
+    "Define `start_date` y `end_date` para cubrir varios años agrícolas. Las series largas suavizan el efecto de semanas nubladas y permiten detectar tendencias estacionales, tal como se explica en los ejercicios de Sentinel-1 con Earth Engine [4]."
    ]
   },
   {
@@ -314,7 +313,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 8. Visualización del Área de Estudio"
+    "## 8. Visualización del área de estudio\n",
+    "\n",
+    "Usa geemap para dibujar los municipios seleccionados sobre un mapa base. Esta vista rápida confirma que las geometrías son correctas y ayuda a comunicar la zona de trabajo a públicos no técnicos. Puedes añadir etiquetas o marcadores si cuentas con parcelas de referencia."
    ]
   },
   {
@@ -348,7 +349,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 9. Exportar Datos para Notebooks Posteriores"
+    "## 9. Exportar datos para notebooks posteriores\n",
+    "\n",
+    "Guarda los resultados en `data/` (`municipios_seleccionados.gpkg`, parámetros temporales y configuraciones adicionales). Estos archivos funcionan como entrada directa para el preprocesamiento SAR, lo que permite reanudar el flujo sin repetir la selección geográfica."
    ]
   },
   {
@@ -375,17 +378,28 @@
    "source": [
     "## Resumen\n",
     "\n",
-    "En este notebook se han completado las siguientes tareas:\n",
+    "Este notebook prepara la zona de estudio y los parámetros temporales que usarán los análisis posteriores. Entregamos límites municipales en WGS84, archivos listos para Earth Engine y un mapa de verificación que ayuda a alinear al equipo.\n",
     "\n",
-    "1. ✓ Carga de la capa de municipios del DANE 2023\n",
-    "2. ✓ Selección de 9 municipios en Casanare y Meta\n",
-    "3. ✓ Reproyección a WGS84 para compatibilidad con Earth Engine\n",
-    "4. ✓ Conversión de geometrías a formato Earth Engine\n",
-    "5. ✓ Definición de parámetros temporales\n",
-    "6. ✓ Visualización del área de estudio\n",
-    "7. ✓ Exportación de datos para análisis posterior\n",
+    "**Próximo notebook:** `02_preprocesamiento_sentinel1.ipynb` limpia y organiza la serie Sentinel-1 antes de calcular indicadores de cambio."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Referencias bibliográficas\n",
     "\n",
-    "**Próximo paso**: Notebook 2 - Preprocesamiento y filtrado de imágenes Sentinel-1"
+    "[1] M. J. Canty, A. A. Nielsen, H. Skriver y K. Conradsen, “Statistical Analysis of Changes in Sentinel-1 Time Series on the Google Earth Engine,” Remote Sensing, vol. 12, no. 1, p. 46, 2020, doi: 10.3390/rs12010046.\n",
+    "\n",
+    "[2] J. Reiche et al., “Combining Satellite Data for Better Tropical Forest Monitoring,” Nature Climate Change, vol. 6, no. 2, pp. 120–122, 2016, doi: 10.1038/nclimate2919.\n",
+    "\n",
+    "[3] M. J. Canty, *Image Analysis, Classification and Change Detection in Remote Sensing, with Algorithms for Python*, 4.ª ed., Boca Raton, FL, USA: CRC Press, 2019.\n",
+    "\n",
+    "[4] Google Earth Engine Developers, “Detecting Changes in Sentinel-1 Imagery, Part 1,” Google Developers, Mountain View, CA, USA, 2024. Disponible en: https://developers.google.com/earth-engine/tutorials/community/detecting-changes-in-sentinel-1-imagery-pt-1\n",
+    "\n",
+    "[5] Ministerio de Agricultura y Desarrollo Rural, *Evaluación Agropecuaria del Departamento del Meta y Casanare*, Bogotá, Colombia, 2023.\n",
+    "\n",
+    "[6] European Space Agency, *Sentinel-1 User Handbook*, ESA-EOEP-CSCOP-TN-13-0001, Noordwijk, Países Bajos, 2013."
    ]
   }
  ],
