--- a/02_preprocesamiento_sentinel1.ipynb
+++ b/02_preprocesamiento_sentinel1.ipynb
@@ -2,55 +2,46 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "3b73c356",
    "metadata": {},
    "source": [
     "# Detección de Cambios con Sentinel-1 en Municipios de Casanare y Meta\n",
+    "\n",
     "## Parte 2: Preprocesamiento y Filtrado de Imágenes Sentinel-1\n",
     "\n",
     "### Introducción\n",
-    "\n",
     "Este notebook implementa el preprocesamiento de imágenes Sentinel-1 SAR siguiendo las mejores prácticas para análisis de series temporales [1]. Sentinel-1 proporciona imágenes de radar en banda C con polarización dual (VV y VH), que son particularmente útiles para monitoreo agrícola debido a su sensibilidad a la estructura y contenido de humedad de la vegetación [2].\n",
     "\n",
     "### Misión Sentinel-1\n",
-    "\n",
     "Sentinel-1 es una constelación de dos satélites (S1A y S1B) que operan en banda C (5.405 GHz) con las siguientes características [3]:\n",
     "\n",
-    "- **Resolución espacial**: 10 m (modo IW - Interferometric Wide swath)\n",
-    "- **Resolución temporal**: 6-12 días (dependiendo de la latitud)\n",
-    "- **Polarizaciones**: VV, VH (dual-pol)\n",
-    "- **Ancho de barrido**: 250 km\n",
+    "- Resolución espacial: 10 m (modo IW - Interferometric Wide swath)\n",
+    "- Resolución temporal: 6-12 días (dependiendo de la latitud)\n",
+    "- Polarizaciones: VV, VH (dual-pol)\n",
+    "- Ancho de barrido: 250 km\n",
     "\n",
     "### Preprocesamiento en Google Earth Engine\n",
-    "\n",
     "Las imágenes Sentinel-1 disponibles en GEE ya han sido preprocesadas por el sistema SNAP [4], incluyendo:\n",
+    "\n",
     "- Corrección de órbita\n",
     "- Calibración radiométrica\n",
     "- Corrección del terreno (GRD - Ground Range Detected)\n",
     "\n",
-    "En este notebook se aplicarán pasos adicionales de procesamiento:\n",
-    "1. Filtrado espacial (reducción de speckle)\n",
-    "2. Filtrado temporal\n",
-    "3. Composiciones temporales\n",
-    "4. Normalización\n",
+    "En este notebook se aplican pasos adicionales para preparar la serie temporal:\n",
     "\n",
-    "---\n",
-    "\n",
-    "### Referencias\n",
-    "\n",
-    "[1] M. J. Canty, A. A. Nielsen, H. Skriver, and K. Conradsen, \"Statistical analysis of changes in Sentinel-1 time series on the Google Earth Engine,\" *Remote Sens.*, vol. 12, no. 1, p. 46, Jan. 2020.\n",
-    "\n",
-    "[2] V. Veloso et al., \"Understanding the temporal behavior of crops using Sentinel-1 and Sentinel-2-like data for agricultural applications,\" *Remote Sens. Environ.*, vol. 199, pp. 415–426, Sep. 2017.\n",
-    "\n",
-    "[3] ESA, \"Sentinel-1 User Handbook,\" European Space Agency, Tech. Rep. ESA-EOEP-CSCOP-TN-13-0001, 2013.\n",
-    "\n",
-    "[4] L. Filipponi, \"Sentinel-1 GRD preprocessing workflow,\" in *Proc. 3rd Int. Electron. Conf. Remote Sens.*, 2019, pp. 1–11."
+    "- Filtrado espacial (reducción de speckle)\n",
+    "- Filtrado temporal\n",
+    "- Composiciones temporales\n",
+    "- Normalización\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. Carga de Librerías y Datos del Notebook Anterior"
+    "## 1. Carga de librerías y datos del notebook anterior\n",
+    "\n",
+    "Este cuaderno reutiliza las bibliotecas configuradas en la fase de preparación y lee los artefactos guardados en `data/`. De esta forma se mantiene la continuidad de parámetros y del área de estudio sin repetir configuraciones manuales."
    ]
   },
   {
@@ -122,7 +113,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. Acceso a la Colección Sentinel-1"
+    "## 2. Acceso a la colección Sentinel-1\n",
+    "\n",
+    "Consulta la colección `COPERNICUS/S1_GRD` en Earth Engine y limita las fechas con las variables definidas antes. El tutorial de cambio de Sentinel-1 muestra cómo fijar la misión, el modo de adquisición IW y la geometría para garantizar escenas comparables [5]."
    ]
   },
   {
@@ -158,9 +151,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. Filtrado por Polarización y Órbita\n",
+    "## 3. Filtrado por polarización y órbita\n",
     "\n",
-    "Para análisis de cambios consistente, es importante usar imágenes de la misma geometría de adquisición [1]."
+    "Selecciona una sola dirección orbital (ascendente o descendente) y conserva las bandas VV y VH. Este filtrado mantiene ángulos de observación similares y ayuda a separar texturas agrícolas, como se discute en las aplicaciones agrícolas de Sentinel-1 [2]."
    ]
   },
   {
@@ -205,7 +198,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4. Análisis Temporal de Disponibilidad de Datos"
+    "## 4. Análisis temporal de disponibilidad de datos\n",
+    "\n",
+    "Lista las fechas disponibles para comprobar que la frecuencia de 6 a 12 días se mantiene. Cuando encuentres vacíos, anótalos en la bitácora del proyecto para explicar posibles huecos en la detección de cambios [5]."
    ]
   },
   {
@@ -274,9 +269,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5. Conversión a dB y Selección de Bandas\n",
+    "## 5. Conversión a dB y selección de bandas\n",
     "\n",
-    "Los valores de backscatter se trabajan típicamente en escala logarítmica (dB) para facilitar la interpretación [2]."
+    "Aplica `10 * log10` a las bandas VV y VH para obtener valores en decibelios. Esta escala facilita comparar periodos distintos y es el formato que usa la literatura de detección de cambios con Sentinel-1 [1]. Calcula también el cociente VV/VH como indicador adicional de estructura de cultivo."
    ]
   },
   {
@@ -311,9 +306,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6. Filtrado de Speckle\n",
+    "## 6. Filtrado de speckle\n",
     "\n",
-    "El speckle es un ruido multiplicativo inherente a las imágenes SAR. Se aplicará un filtro espacial para reducirlo [3]."
+    "Utiliza un filtro focal-median u otra opción disponible en Earth Engine para reducir el ruido granular propio de las imágenes SAR. La guía de preprocesamiento detalla cómo combinar filtros espaciales y temporales sin perder detalles relevantes [2]."
    ]
   },
   {
@@ -351,9 +346,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 7. Composiciones Temporales\n",
+    "## 7. Composiciones temporales\n",
     "\n",
-    "Crear composiciones mensuales para reducir el volumen de datos y mejorar la relación señal-ruido [4]."
+    "Agrupa las imágenes por mes y calcula la mediana. Esto suaviza variaciones puntuales y crea una serie que puede analizarse con métodos estadísticos sencillos. Guarda tanto la colección filtrada como las composiciones para reutilizarlas más adelante [5]."
    ]
   },
   {
@@ -416,7 +411,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 8. Visualización de Imágenes"
+    "## 8. Visualización de imágenes\n",
+    "\n",
+    "Usa geemap para revisar las capas VV, VH y el índice VV/VH sobre cada municipio. Las vistas interactivas ayudan a comprobar que el filtrado y las composiciones mantienen la estructura de los cultivos."
    ]
   },
   {
@@ -482,7 +479,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 9. Análisis de Estadísticas por Municipio"
+    "## 9. Análisis de estadísticas por municipio\n",
+    "\n",
+    "Extrae estadísticas (media, percentiles) por municipio. Estos valores serán la línea base para comparar cambios y replican la práctica recomendada para monitorear arroz y otros cultivos con radar [6]."
    ]
   },
   {
@@ -554,7 +553,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 10. Guardar Colecciones Procesadas"
+    "## 10. Guardar colecciones procesadas\n",
+    "\n",
+    "Exporta metadatos y colecciones a `data/`, incluyendo nombres de bandas, fechas y parámetros de filtrado. Documentar esta información permite repetir el procesamiento o auditar los resultados sin volver a ejecutar todos los pasos."
    ]
   },
   {
@@ -590,24 +591,28 @@
    "source": [
     "## Resumen\n",
     "\n",
-    "En este notebook se completaron las siguientes tareas:\n",
+    "Este notebook prepara la serie de Sentinel-1 con filtros de órbita y polarización, convierte el backscatter a dB, atenúa el speckle y genera composiciones mensuales. También produce estadísticas municipales que se usarán como punto de comparación en la detección de cambios.\n",
     "\n",
-    "1. ✓ Acceso a la colección Sentinel-1 GRD en Google Earth Engine\n",
-    "2. ✓ Filtrado por modo de adquisición (IW), polarización (VV+VH) y órbita\n",
-    "3. ✓ Análisis de disponibilidad temporal de datos\n",
-    "4. ✓ Conversión de backscatter a escala logarítmica (dB)\n",
-    "5. ✓ Cálculo de ratio VV/VH\n",
-    "6. ✓ Aplicación de filtro de speckle (focal median)\n",
-    "7. ✓ Creación de composiciones mensuales\n",
-    "8. ✓ Visualización de imágenes procesadas\n",
-    "9. ✓ Extracción de estadísticas por municipio\n",
-    "10. ✓ Exportación de datos procesados\n",
+    "**Próximo notebook:** `03_deteccion_cambios.ipynb` aplica métodos estadísticos para marcar áreas en transformación."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Referencias bibliográficas\n",
     "\n",
-    "### Colecciones disponibles para análisis de cambios:\n",
-    "- `s1_filtered_speckle`: Colección completa con filtro de speckle\n",
-    "- `s1_monthly`: Composiciones mensuales (recomendado para detección de cambios)\n",
+    "[1] M. J. Canty, A. A. Nielsen, H. Skriver y K. Conradsen, “Statistical Analysis of Changes in Sentinel-1 Time Series on the Google Earth Engine,” Remote Sensing, vol. 12, no. 1, p. 46, 2020, doi: 10.3390/rs12010046.\n",
     "\n",
-    "**Próximo paso**: Notebook 3 - Análisis de detección de cambios usando algoritmos estadísticos"
+    "[2] A. Veloso et al., “Understanding the Temporal Behavior of Crops Using Sentinel-1 and Sentinel-2-like Data for Agricultural Applications,” Remote Sensing of Environment, vol. 199, pp. 415–426, 2017, doi: 10.1016/j.rse.2017.07.015.\n",
+    "\n",
+    "[3] European Space Agency, *Sentinel-1 User Handbook*, ESA-EOEP-CSCOP-TN-13-0001, Noordwijk, Países Bajos, 2013.\n",
+    "\n",
+    "[4] F. Filipponi, “Sentinel-1 GRD Preprocessing Workflow,” en Proc. 3rd Int. Electron. Conf. Remote Sens., 2019, pp. 1–11, doi: 10.3390/ECRS-3-06201.\n",
+    "\n",
+    "[5] Google Earth Engine Developers, “Detecting Changes in Sentinel-1 Imagery, Part 2,” Google Developers, Mountain View, CA, USA, 2024. Disponible en: https://developers.google.com/earth-engine/tutorials/community/detecting-changes-in-sentinel-1-imagery-pt-2\n",
+    "\n",
+    "[6] A. Nelson et al., “Towards an Operational SAR-Based Rice Monitoring System in Asia,” Remote Sensing, vol. 6, no. 11, pp. 10773–10812, 2014, doi: 10.3390/rs61110773."
    ]
   }
  ],
