--- a/03_deteccion_cambios.ipynb
+++ b/03_deteccion_cambios.ipynb
@@ -2,58 +2,48 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "a992cafd",
    "metadata": {},
    "source": [
     "# Detección de Cambios con Sentinel-1 en Municipios de Casanare y Meta\n",
+    "\n",
     "## Parte 3: Análisis de Detección de Cambios\n",
     "\n",
     "### Introducción\n",
+    "Este notebook implementa algoritmos de detección de cambios en series temporales de imágenes Sentinel-1 SAR. La metodología se basa en el análisis estadístico multivariado propuesto por Conradsen et al. [1] y adaptado por Canty et al. [2] para Google Earth Engine.\n",
     "\n",
-    "Este notebook implementa algoritmos de detección de cambios en series temporales de imágenes Sentinel-1 SAR. La metodología se basa en el análisis estadístico multivariado de cambios propuesto por Conradsen et al. [1] y adaptado por Canty et al. [2] para Google Earth Engine.\n",
+    "### Marco teórico\n",
+    "**Test de razón de verosimilitud (Likelihood Ratio Test)**\n",
+    "Para dos imágenes SAR dual-pol adquiridas en tiempos $t_1$ y $t_2$, el test de Wishart complejo usa la estadística [1]:\n",
     "\n",
-    "### Marco Teórico\n",
+    "$$\\Lambda = -L \\ln \\left( \\frac{\\det(\\mathbf{\\Sigma}_1 + \\mathbf{\\Sigma}_2)}{2^p \\det(\\mathbf{\\Sigma}_1)^{1/2} \\det(\\mathbf{\\Sigma}_2)^{1/2}} \\right)$$\n",
     "\n",
-    "#### Test de Razón de Verosimilitud (Likelihood Ratio Test)\n",
+    "Donde $\\mathbf{\\Sigma}_1$ y $\\mathbf{\\Sigma}_2$ son las matrices de covarianza de cada fecha, $L$ es el número de looks equivalentes y $p$ el número de polarizaciones. Valores altos de $\\Lambda$ señalan cambios significativos.\n",
     "\n",
-    "Para detectar cambios en imágenes SAR de polarización dual, se utiliza el test de razón de verosimilitud complejo de Wishart [1]. Para dos imágenes SAR adquiridas en tiempos $t_1$ y $t_2$, la estadística de prueba $Q$ se define como:\n",
+    "**Extensión a series temporales**\n",
+    "Para una secuencia de $N$ imágenes, el test se aplica de forma secuencial para identificar el momento del cambio [3]. Se declara un cambio en el instante $k$ si:\n",
     "\n",
-    "$$Q = \\frac{|\\Sigma_1 + \\Sigma_2|^{2n}}{|\\Sigma_1|^n |\\Sigma_2|^n}$$\n",
+    "$$\\Lambda_k > -\\ln(\\beta) + (N - k)\\ln(\\alpha)$$\n",
     "\n",
-    "donde $\\Sigma_i$ son las matrices de covarianza para cada fecha y $n$ es el número de looks equivalentes.\n",
+    "con $\\alpha$ el nivel de significancia, $\\beta$ un factor de corrección y grados de libertad relacionados con $p$.\n",
     "\n",
-    "#### Extensión a Series Temporales\n",
+    "**Métodos complementarios**\n",
+    "Para ampliar la interpretación se incluyen:\n",
     "\n",
-    "Para series temporales de $k$ imágenes, el test se aplica secuencialmente para detectar el momento y la magnitud de cambios [3]. Un cambio es detectado cuando:\n",
+    "- Diferencias temporales: $\\Delta_{\\text{VV}} = \\text{VV}_{t_2} - \\text{VV}_{t_1}$ y equivalentes para VH.\n",
+    "- Anomalías (z-scores): $$z_{t} = \\frac{x_t - \\mu}{\\sigma}$$ comparando cada fecha con la media histórica $\\mu$ y la desviación estándar $\\sigma$.\n",
+    "- Índice NDCV: $$\\text{NDCV} = \\frac{\\left\\|\\mathbf{C}_{t_2} - \\mathbf{C}_{t_1}\\right\\|}{\\left\\|\\mathbf{C}_{t_2} + \\mathbf{C}_{t_1}\\right\\|}$$ con $\\mathbf{C}$ el vector de backscatter (VV, VH). Valores próximos a 1 reflejan cambios de gran magnitud.\n",
     "\n",
-    "$$-2\\rho\\ln Q > \\chi^2_{\\alpha, f}$$\n",
-    "\n",
-    "donde $\\rho$ es un factor de corrección, $\\alpha$ es el nivel de significancia y $f$ son los grados de libertad.\n",
-    "\n",
-    "### Métodos Complementarios\n",
-    "\n",
-    "Además del método estadístico, se implementarán:\n",
-    "1. **Análisis de diferencias temporales**: Diferencias absolutas y relativas de backscatter\n",
-    "2. **Análisis de anomalías**: Detección de desviaciones respecto a la media temporal\n",
-    "3. **Índices de cambio**: NDCV (Normalized Difference Change Vector)\n",
-    "\n",
-    "---\n",
-    "\n",
-    "### Referencias\n",
-    "\n",
-    "[1] K. Conradsen, A. A. Nielsen, J. Schou, and H. Skriver, \"A test statistic in the complex Wishart distribution and its application to change detection in polarimetric SAR data,\" *IEEE Trans. Geosci. Remote Sens.*, vol. 41, no. 1, pp. 4–19, Jan. 2003.\n",
-    "\n",
-    "[2] M. J. Canty, A. A. Nielsen, H. Skriver, and K. Conradsen, \"Statistical analysis of changes in Sentinel-1 time series on the Google Earth Engine,\" *Remote Sens.*, vol. 12, no. 1, p. 46, Jan. 2020.\n",
-    "\n",
-    "[3] A. A. Nielsen, K. Conradsen, and H. Skriver, \"Omnibus test for change detection in a time sequence of polarimetric SAR data,\" in *Proc. IEEE IGARSS*, 2015, pp. 3398–3401.\n",
-    "\n",
-    "[4] Y. Bazi, L. Bruzzone, and F. Melgani, \"An unsupervised approach based on the generalized Gaussian model to automatic change detection in multitemporal SAR images,\" *IEEE Trans. Geosci. Remote Sens.*, vol. 43, no. 4, pp. 874–887, Apr. 2005."
+    "---"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. Carga de Librerías y Datos Preprocesados"
+    "## 1. Carga de librerías y datos preprocesados\n",
+    "\n",
+    "Importamos `ee`, `geemap`, `pandas` y los archivos generados en los notebooks anteriores. Esta práctica garantiza que el análisis se base en los mismos parámetros temporales y en la zona de estudio que ya validamos."
    ]
   },
   {
@@ -135,7 +125,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. Recreación de la Colección Sentinel-1 Procesada"
+    "## 2. Recreación de la colección Sentinel-1 procesada\n",
+    "\n",
+    "Reconstruye las funciones de preprocesamiento (conversión a dB, filtros) para que este notebook pueda ejecutarse de forma independiente. El tutorial de Earth Engine sobre detección de cambios explica cómo encapsular este flujo en funciones reutilizables [6]."
    ]
   },
   {
@@ -194,9 +186,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. Método 1: Análisis de Diferencias Temporales\n",
+    "## 3. Método 1: análisis de diferencias temporales\n",
     "\n",
-    "El método más simple pero efectivo: calcular diferencias entre períodos de referencia y análisis [4]."
+    "Compara una imagen de referencia con una imagen objetivo mediante restas de VV, VH y del índice VV/VH. Valores altos positivos muestran incrementos de retrodispersión, mientras que valores negativos señalan reducciones, como ocurre tras una cosecha [4]."
    ]
   },
   {
@@ -287,9 +279,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4. Método 2: Análisis de Anomalías\n",
+    "## 4. Método 2: análisis de anomalías\n",
     "\n",
-    "Detectar anomalías calculando desviaciones respecto a la media y desviación estándar temporal."
+    "Calcula z-scores por píxel utilizando la media y desviación estándar de la serie histórica. Los z-scores permiten detectar valores atípicos persistentes, siguiendo la lógica de las pruebas estadísticas propuestas para series Sentinel-1 [3]."
    ]
   },
   {
@@ -325,9 +317,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5. Método 3: Índice Normalizado de Vector de Cambio (NDCV)\n",
+    "## 5. Método 3: índice normalizado de vector de cambio (NDCV)\n",
     "\n",
-    "Un índice que normaliza la magnitud del cambio respecto a la suma de intensidades [4]."
+    "El NDCV resume la magnitud del cambio combinando las bandas VV y VH en una medida entre 0 y 1. Valores cercanos a 1 indican transformaciones fuertes y ayudan a resaltar eventos abruptos, como conversiones de suelo [4]."
    ]
   },
   {
@@ -372,9 +364,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6. Clasificación de Tipos de Cambio\n",
+    "## 6. Clasificación de tipos de cambio\n",
     "\n",
-    "Categorizar los cambios detectados según su naturaleza (aumento/disminución en backscatter)."
+    "Integra los tres métodos para clasificar cada píxel en categorías sencillas: aumento, disminución o variabilidad mixta. Puedes ajustar umbrales en función del cultivo y de la experiencia en campo, tal como sugieren los ejercicios prácticos del tutorial [6]."
    ]
   },
   {
@@ -439,7 +431,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 7. Estadísticas de Cambio por Municipio"
+    "## 7. Estadísticas de cambio por municipio\n",
+    "\n",
+    "Agrega los resultados por municipio para calcular superficie afectada, intensidad media y porcentaje de cada categoría. Estas métricas son fáciles de explicar a equipos de planificación y siguen la estructura usada en estudios de cambio no supervisado [5]."
    ]
   },
   {
@@ -548,7 +542,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 8. Visualización de Resultados"
+    "## 8. Visualización de resultados\n",
+    "\n",
+    "Muestra mapas interactivos con las diferencias de VV, el NDCV y la clasificación final. Las leyendas claras ayudan a los lectores a relacionar colores con procesos agrícolas específicos."
    ]
   },
   {
@@ -601,9 +597,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 9. Análisis de Patrones Temporales\n",
+    "## 9. Análisis de patrones temporales\n",
     "\n",
-    "Extraer series temporales para analizar la dinámica de cambios."
+    "Extrae series temporales para municipios o puntos de interés y grafica ventanas móviles. Esto permite distinguir entre cambios graduales por manejo agrícola y picos repentinos ligados a eventos climáticos [6]."
    ]
   },
   {
@@ -695,7 +691,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 10. Exportar Resultados"
+    "## 10. Exportar resultados\n",
+    "\n",
+    "Guarda las tablas y archivos espaciales en `data/` con nombres descriptivos. Incluye metadatos sobre fechas, umbrales y métodos para facilitar auditorías y comparaciones futuras."
    ]
   },
   {
@@ -736,27 +734,28 @@
    "source": [
     "## Resumen\n",
     "\n",
-    "En este notebook se implementaron múltiples métodos de detección de cambios:\n",
+    "Este notebook combina tres métodos de detección de cambios, clasifica los resultados y genera métricas y visualizaciones por municipio. Los archivos exportados sirven como insumo directo para la etapa de comunicación de resultados.\n",
     "\n",
-    "1. ✓ **Análisis de diferencias temporales**: Diferencias absolutas y relativas entre períodos\n",
-    "2. ✓ **Análisis de anomalías**: Detección mediante Z-scores\n",
-    "3. ✓ **Índice NDCV**: Normalización de cambios\n",
-    "4. ✓ **Clasificación de cambios**: 5 categorías según magnitud y dirección\n",
-    "5. ✓ **Estadísticas por municipio**: Cuantificación de áreas de cambio\n",
-    "6. ✓ **Series temporales**: Análisis de dinámica temporal\n",
+    "**Próximo notebook:** `04_visualizacion_interpretacion.ipynb` crea gráficos, mapas y mensajes clave para difundir los hallazgos."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Referencias bibliográficas\n",
     "\n",
-    "### Principales hallazgos:\n",
+    "[1] K. Conradsen, A. A. Nielsen, J. Schou y H. Skriver, “A Test Statistic in the Complex Wishart Distribution and Its Application to Change Detection in Polarimetric SAR Data,” IEEE Trans. Geosci. Remote Sens., vol. 41, no. 1, pp. 4–19, 2003, doi: 10.1109/TGRS.2002.808066.\n",
     "\n",
-    "- Los municipios están ordenados por porcentaje de área con cambios detectados\n",
-    "- Los cambios se clasifican en aumento/disminución de backscatter\n",
-    "- Las series temporales muestran la variabilidad estacional\n",
+    "[2] M. J. Canty, A. A. Nielsen, H. Skriver y K. Conradsen, “Statistical Analysis of Changes in Sentinel-1 Time Series on the Google Earth Engine,” Remote Sensing, vol. 12, no. 1, p. 46, 2020, doi: 10.3390/rs12010046.\n",
     "\n",
-    "### Interpretación agrícola:\n",
+    "[3] A. A. Nielsen, K. Conradsen y H. Skriver, “Omnibus Test for Change Detection in a Time Sequence of Polarimetric SAR Data,” en IEEE Int. Geosci. Remote Sens. Symp., 2015, pp. 3398–3401, doi: 10.1109/IGARSS.2015.7326538.\n",
     "\n",
-    "- **Aumento de backscatter**: Posible crecimiento vegetativo, inundación de cultivos (arroz)\n",
-    "- **Disminución de backscatter**: Posible cosecha, preparación de suelo, sequía\n",
+    "[4] M. J. Canty, *Image Analysis, Classification and Change Detection in Remote Sensing, with Algorithms for Python*, 4.ª ed., Boca Raton, FL, USA: CRC Press, 2019.\n",
     "\n",
-    "**Próximo paso**: Notebook 4 - Visualización avanzada e interpretación contextual de resultados"
+    "[5] Y. Bazi, L. Bruzzone y F. Melgani, “An Unsupervised Approach Based on the Generalized Gaussian Model to Automatic Change Detection in Multitemporal SAR Images,” IEEE Trans. Geosci. Remote Sens., vol. 43, no. 4, pp. 874–887, 2005, doi: 10.1109/TGRS.2004.842441.\n",
+    "\n",
+    "[6] Google Earth Engine Developers, “Detecting Changes in Sentinel-1 Imagery, Part 3,” Google Developers, Mountain View, CA, USA, 2024. Disponible en: https://developers.google.com/earth-engine/tutorials/community/detecting-changes-in-sentinel-1-imagery-pt-3\n"
    ]
   }
  ],
