--- a/04_visualizacion_interpretacion.ipynb
+++ b/04_visualizacion_interpretacion.ipynb
@@ -2,56 +2,45 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "2b48fc2b",
    "metadata": {},
    "source": [
     "# Detección de Cambios con Sentinel-1 en Municipios de Casanare y Meta\n",
+    "\n",
     "## Parte 4: Visualización e Interpretación de Resultados\n",
     "\n",
     "### Introducción\n",
+    "Este notebook final presenta visualizaciones avanzadas y una interpretación contextualizada de los cambios detectados en las imágenes Sentinel-1 SAR. El objetivo es facilitar la comunicación de resultados y proporcionar _insights_ para la toma de decisiones en monitoreo agrícola [1].\n",
     "\n",
-    "Este notebook final presenta visualizaciones avanzadas y una interpretación contextualizada de los cambios detectados en las imágenes Sentinel-1 SAR. El objetivo es facilitar la comunicación de resultados y proporcionar insights para la toma de decisiones en monitoreo agrícola [1].\n",
-    "\n",
-    "### Contexto Agrícola Regional\n",
-    "\n",
+    "### Contexto agrícola regional\n",
     "La región de la Orinoquía colombiana (departamentos de Meta y Casanare) es una zona de gran importancia agrícola, caracterizada por [2]:\n",
     "\n",
-    "- **Cultivos principales**: Arroz, maíz, palma de aceite, soya, pastos para ganadería\n",
-    "- **Estacionalidad**: Dos períodos de lluvia (abril-mayo y octubre-noviembre)\n",
-    "- **Ciclos agrícolas**: Cultivos de ciclo corto (3-4 meses) y permanentes\n",
-    "- **Sistemas de riego**: Predominancia de riego por inundación en arroz\n",
+    "- Cultivos principales: arroz, maíz, palma de aceite, soya y pastos para ganadería.\n",
+    "- Estacionalidad: dos períodos de lluvia (abril–mayo y octubre–noviembre).\n",
+    "- Ciclos agrícolas: cultivos de ciclo corto (3–4 meses) y permanentes.\n",
+    "- Sistemas de riego: predominio de riego por inundación en arroz.\n",
     "\n",
-    "### Interpretación de Cambios SAR en Contexto Agrícola\n",
+    "### Interpretación de cambios SAR en contexto agrícola\n",
+    "Las variaciones de backscatter en Sentinel-1 pueden indicar [3], [4]:\n",
     "\n",
-    "Las variaciones de backscatter en Sentinel-1 pueden indicar [3][4]:\n",
-    "\n",
-    "| Cambio Observado | Interpretación Agrícola Posible |\n",
-    "|------------------|----------------------------------|\n",
+    "| Cambio observado | Interpretación agrícola posible |\n",
+    "| --- | --- |\n",
     "| Aumento VV y VH | Crecimiento vegetativo, emergencia de cultivos |\n",
     "| Aumento VV, estable VH | Inundación de campos (preparación arroz) |\n",
     "| Disminución VV y VH | Cosecha, senescencia, preparación de suelo |\n",
     "| Alta variabilidad temporal | Rotación de cultivos, gestión activa |\n",
     "| Cambios abruptos | Eventos climáticos, quemas, mecanización |\n",
     "\n",
-    "---\n",
-    "\n",
-    "### Referencias\n",
-    "\n",
-    "[1] F. Holecz et al., \"Towards operational monitoring of rice cultivation using multi-temporal RADARSAT and TerraSAR-X data: Examples from Bangladesh and Thailand,\" *Remote Sens.*, vol. 5, no. 4, pp. 1709–1733, Apr. 2013.\n",
-    "\n",
-    "[2] MADR, \"Evaluación Agropecuaria del Departamento del Meta y Casanare,\" Ministerio de Agricultura y Desarrollo Rural de Colombia, Tech. Rep., 2023.\n",
-    "\n",
-    "[3] V. Veloso et al., \"Understanding the temporal behavior of crops using Sentinel-1 and Sentinel-2-like data for agricultural applications,\" *Remote Sens. Environ.*, vol. 199, pp. 415–426, Sep. 2017.\n",
-    "\n",
-    "[4] A. Nelson et al., \"Towards an operational SAR-based rice monitoring system in Asia: Examples from 13 demonstration sites across Asia in the RIICE project,\" *Remote Sens.*, vol. 6, no. 11, pp. 10773–10812, Nov. 2014.\n",
-    "\n",
-    "[5] M. J. Canty, A. A. Nielsen, H. Skriver, and K. Conradsen, \"Statistical analysis of changes in Sentinel-1 time series on the Google Earth Engine,\" *Remote Sens.*, vol. 12, no. 1, p. 46, Jan. 2020."
+    "---"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. Carga de Librerías y Resultados Previos"
+    "## 1. Carga de librerías y resultados previos\n",
+    "\n",
+    "Importa `pandas`, `geopandas`, `plotly`, `matplotlib` y `geemap`, y carga los archivos exportados en el notebook anterior. Trabajar con un conjunto común de datos mantiene alineadas las visualizaciones y evita inconsistencias al preparar el informe final."
    ]
   },
   {
@@ -127,7 +116,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. Visualización de Estadísticas de Cambio"
+    "## 2. Visualización de estadísticas de cambio\n",
+    "\n",
+    "Genera gráficos de barras, tablas y diagramas de dispersión que muestren superficie en cambio, variaciones de VV/VH y magnitud NDCV por municipio. Etiqueta los valores clave para que el público general pueda interpretar rápidamente qué localidades requieren atención."
    ]
   },
   {
@@ -228,7 +219,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. Análisis Temporal Detallado"
+    "## 3. Análisis temporal detallado\n",
+    "\n",
+    "Crea series temporales con promedios móviles o cuantiles para destacar tendencias estacionales y eventos puntuales. Este enfoque facilita comparar diferentes campañas agrícolas siguiendo las recomendaciones del tutorial de Earth Engine [5]."
    ]
   },
   {
@@ -313,7 +306,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4. Mapas Temáticos Avanzados"
+    "## 4. Mapas temáticos avanzados\n",
+    "\n",
+    "Construye mapas interactivos en geemap con capas que representen cada método de cambio. Usa paletas claras, agrega leyendas y, si es posible, marcadores de terreno para que cualquier persona pueda ubicar los cultivos sobre el mapa [5]."
    ]
   },
   {
@@ -435,7 +430,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5. Análisis Comparativo por Departamento"
+    "## 5. Análisis comparativo por departamento\n",
+    "\n",
+    "Agrupa las estadísticas por departamento para resaltar diferencias entre Meta y Casanare. Gráficos como boxplots o barras apiladas ayudan a comunicar estas variaciones a las autoridades locales [6]."
    ]
   },
   {
@@ -509,7 +506,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6. Interpretación Agrícola de Resultados"
+    "## 6. Interpretación agrícola de resultados\n",
+    "\n",
+    "Relaciona cada categoría de cambio con actividades de campo. Por ejemplo, incrementos simultáneos en VV y VH suelen señalar crecimiento vegetativo, mientras que reducciones indican cosecha o preparación del suelo. Complementa estas observaciones con notas de campo cuando estén disponibles [6], [5]."
    ]
   },
   {
@@ -565,7 +564,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 7. Reporte de Síntesis"
+    "## 7. Reporte de síntesis\n",
+    "\n",
+    "Resume los hallazgos en un texto corto que incluya indicadores principales, mapas representativos y sugerencias para el monitoreo continuo. Un lenguaje directo permite que actores no técnicos comprendan el estado de los cultivos y las acciones recomendadas [5]."
    ]
   },
   {
@@ -658,7 +659,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 8. Exportación de Resultados Finales"
+    "## 8. Exportación de resultados finales\n",
+    "\n",
+    "Guarda tablas (`data/resultados_finales_con_interpretacion.csv`, `data/resumen_ejecutivo.json`) y mapas listos para compartir. Documenta la fecha de actualización y la versión de cada figura para facilitar el seguimiento histórico."
    ]
   },
   {
@@ -727,63 +730,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Conclusiones y Trabajo Futuro\n",
+    "### Referencias bibliográficas\n",
     "\n",
-    "### Conclusiones Principales\n",
+    "[1] Google Earth Engine Developers, “Detecting Changes in Sentinel-1 Imagery, Part 4,” Google Developers, Mountain View, CA, USA, 2024. Disponible en: https://developers.google.com/earth-engine/tutorials/community/detecting-changes-in-sentinel-1-imagery-pt-4\n",
     "\n",
-    "Este proyecto ha implementado exitosamente una metodología completa de detección de cambios usando imágenes Sentinel-1 SAR en Google Earth Engine para 9 municipios de los departamentos de Casanare y Meta en Colombia. Los principales aportes incluyen:\n",
+    "[2] Ministerio de Agricultura y Desarrollo Rural, *Evaluación Agropecuaria del Departamento del Meta y Casanare*, Bogotá, Colombia, 2023.\n",
     "\n",
-    "1. **Metodología robusta**: Implementación de múltiples métodos de detección (diferencias temporales, anomalías, NDCV)\n",
-    "2. **Análisis cuantitativo**: Cuantificación precisa de áreas de cambio por municipio\n",
-    "3. **Interpretación contextualizada**: Vinculación de cambios detectados con procesos agrícolas regionales\n",
-    "4. **Reproducibilidad**: Código documentado y parametrizado para futuros análisis\n",
+    "[3] A. Nelson et al., “Towards an Operational SAR-Based Rice Monitoring System in Asia,” Remote Sensing, vol. 6, no. 11, pp. 10773–10812, 2014, doi: 10.3390/rs61110773.\n",
     "\n",
-    "### Aplicaciones Prácticas\n",
+    "[4] F. Ramadhani, R. Pullanagari, G. Kereszturi y J. Procter, “Soybean Cropland Mapping Using Multi-temporal Sentinel-1 Data,” Int. Arch. Photogramm. Remote Sens. Spatial Inf. Sci., vol. XLII-3/W6, pp. 109–114, 2019, doi: 10.5194/isprs-archives-XLII-3-W6-109-2019.\n",
     "\n",
-    "Los resultados pueden ser utilizados para:\n",
-    "- Monitoreo de expansión/retracción de áreas agrícolas\n",
-    "- Identificación de períodos críticos de actividad agrícola\n",
-    "- Apoyo a sistemas de alerta temprana de sequías o inundaciones\n",
-    "- Validación de reportes oficiales de producción agrícola\n",
+    "[5] A. Veloso et al., “Understanding the Temporal Behavior of Crops Using Sentinel-1 and Sentinel-2-like Data for Agricultural Applications,” Remote Sensing of Environment, vol. 199, pp. 415–426, 2017, doi: 10.1016/j.rse.2017.07.015.\n",
     "\n",
-    "### Trabajo Futuro\n",
-    "\n",
-    "Para mejorar y extender este análisis se recomienda:\n",
-    "\n",
-    "1. **Validación de campo**: Correlacionar cambios detectados con datos de cultivos reales\n",
-    "2. **Fusión multi-sensor**: Integrar con datos Sentinel-2 para mejorar discriminación de cultivos\n",
-    "3. **Series temporales completas**: Analizar múltiples años para detectar tendencias\n",
-    "4. **Machine Learning**: Implementar clasificación supervisada de tipos de cambio\n",
-    "5. **Análisis fenológico**: Vincular con modelos de crecimiento de cultivos específicos\n",
-    "6. **Automatización**: Desarrollar sistema de monitoreo continuo con alertas\n",
-    "\n",
-    "### Referencias Bibliográficas Completas\n",
-    "\n",
-    "[1] F. Holecz et al., \"Towards operational monitoring of rice cultivation using multi-temporal RADARSAT and TerraSAR-X data: Examples from Bangladesh and Thailand,\" *Remote Sens.*, vol. 5, no. 4, pp. 1709–1733, Apr. 2013.\n",
-    "\n",
-    "[2] MADR, \"Evaluación Agropecuaria del Departamento del Meta y Casanare,\" Ministerio de Agricultura y Desarrollo Rural de Colombia, Tech. Rep., 2023.\n",
-    "\n",
-    "[3] V. Veloso et al., \"Understanding the temporal behavior of crops using Sentinel-1 and Sentinel-2-like data for agricultural applications,\" *Remote Sens. Environ.*, vol. 199, pp. 415–426, Sep. 2017.\n",
-    "\n",
-    "[4] A. Nelson et al., \"Towards an operational SAR-based rice monitoring system in Asia: Examples from 13 demonstration sites across Asia in the RIICE project,\" *Remote Sens.*, vol. 6, no. 11, pp. 10773–10812, Nov. 2014.\n",
-    "\n",
-    "[5] M. J. Canty, A. A. Nielsen, H. Skriver, and K. Conradsen, \"Statistical analysis of changes in Sentinel-1 time series on the Google Earth Engine,\" *Remote Sens.*, vol. 12, no. 1, p. 46, Jan. 2020.\n",
-    "\n",
-    "[6] K. Conradsen, A. A. Nielsen, J. Schou, and H. Skriver, \"A test statistic in the complex Wishart distribution and its application to change detection in polarimetric SAR data,\" *IEEE Trans. Geosci. Remote Sens.*, vol. 41, no. 1, pp. 4–19, Jan. 2003.\n",
-    "\n",
-    "[7] ESA, \"Sentinel-1 User Handbook,\" European Space Agency, Tech. Rep. ESA-EOEP-CSCOP-TN-13-0001, 2013.\n",
-    "\n",
-    "[8] L. Filipponi, \"Sentinel-1 GRD preprocessing workflow,\" in *Proc. 3rd Int. Electron. Conf. Remote Sens.*, 2019, pp. 1–11.\n",
-    "\n",
-    "[9] M. J. Canty, *Image Analysis, Classification and Change Detection in Remote Sensing, with Algorithms for Python*, 4th ed. Boca Raton, FL: CRC Press, 2019.\n",
-    "\n",
-    "[10] A. Reiche et al., \"Combining satellite data for better tropical forest monitoring,\" *Nat. Clim. Change*, vol. 6, pp. 120–122, Feb. 2016.\n",
-    "\n",
-    "---\n",
-    "\n",
-    "**Fin del Análisis**\n",
-    "\n",
-    "*Proyecto desarrollado con Python, Google Earth Engine, geemap y geopandas*"
+    "[6] A. M. L. Chua, M. A. R. Sarimun y I. Malek, “Application of Sentinel-1 Satellite to Identify Oil Palm Plantations in Balikpapan Bay,” IOP Conf. Ser.: Earth Environ. Sci., vol. 169, no. 1, p. 012037, 2018, doi: 10.1088/1755-1315/169/1/012037."
    ]
   }
  ],
