--- a/sentinel1_change_detection_complete.ipynb
+++ b/sentinel1_change_detection_complete.ipynb
@@ -4,85 +4,87 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Monitoreo de Cambios Agrícolas con Sentinel-1 SAR en los Llanos Orientales de Colombia\n",
-    "\n",
-    "**Análisis Integrado de Detección de Cambios en Municipios de Casanare y Meta**\n",
-    "\n",
-    "---\n",
-    "\n",
-    "## Resumen Ejecutivo\n",
-    "\n",
-    "Este notebook implementa un sistema completo de detección de cambios usando imágenes de radar Sentinel-1 SAR (Synthetic Aperture Radar) en Google Earth Engine para identificar cambios potencialmente asociados a actividad agrícola en 9 municipios seleccionados de los departamentos de Casanare y Meta, Colombia.\n",
-    "\n",
-    "### Contexto Regional\n",
-    "\n",
-    "Los Llanos Orientales de Colombia son una región agrícola de gran importancia, con extensos cultivos de **arroz**, **soya** y **palma de aceite** \\[1\\]. La constante presencia de nubes durante gran parte del año impide que los satélites ópticos tradicionales tomen imágenes claras de la superficie \\[2\\]. El radar Sentinel-1 supera este obstáculo al no depender de la luz solar, pudiendo atravesar las nubes y obtener imágenes consistentes cada 6-12 días \\[3\\].\n",
-    "\n",
+    "# Monitoreo de cambios agrícolas con Sentinel-1 SAR en los llanos orientales de Colombia\n",
+    "",
+    "**Análisis Integrado de Detección de Cambios en Municipios de Casanare y Meta**",
+    "",
+    "---",
+    "",
+    "## Resumen ejecutivo\n",
+    "",
+    "Este notebook implementa un sistema completo de detección de cambios usando imágenes de radar Sentinel-1 SAR (Synthetic Aperture Radar) en Google Earth Engine para identificar cambios potencialmente asociados a actividad agrícola en 9 municipios seleccionados de los departamentos de Casanare y Meta, Colombia.",
+    "",
+    "### Contexto regional\n",
+    "",
+    "Los Llanos Orientales de Colombia son una región agrícola de gran importancia, con extensos cultivos de **arroz**, **soya** y **palma de aceite** \\[1\\]. La constante presencia de nubes durante gran parte del año impide que los satélites ópticos tradicionales tomen imágenes claras de la superficie \\[2\\]. El radar Sentinel-1 supera este obstáculo al no depender de la luz solar, pudiendo atravesar las nubes y obtener imágenes consistentes cada 6-12 días \\[3\\].",
+    "",
     "### Objetivos\n",
-    "\n",
-    "1. Implementar preprocesamiento consistente de imágenes Sentinel-1 GRD\n",
-    "2. Aplicar múltiples métodos de detección de cambios (diferencias temporales, anomalías, NDCV)\n",
-    "3. Clasificar y cuantificar cambios por municipio\n",
-    "4. Interpretar cambios en contexto agrícola regional\n",
-    "\n",
+    "",
+    "1. Implementar preprocesamiento consistente de imágenes Sentinel-1 GRD",
+    "2. Aplicar múltiples métodos de detección de cambios (diferencias temporales, anomalías, NDCV)",
+    "3. Clasificar y cuantificar cambios por municipio",
+    "4. Interpretar cambios en contexto agrícola regional",
+    "",
     "### Metodología\n",
-    "\n",
-    "El análisis se basa en la metodología de análisis estadístico de cambios en series temporales de Sentinel-1 propuesta por Canty et al. \\[4\\] y el test de Wishart complejo de Conradsen et al. \\[5\\].\n",
-    "\n",
-    "### Área de Estudio\n",
-    "\n",
-    "**Departamento del Meta:**\n",
-    "- Puerto López (código DANE: 50-573)\n",
-    "- Castilla La Nueva (50-150)\n",
-    "- San Carlos de Guaroa (50-680)\n",
-    "- Cabuyaro (50-124)\n",
-    "\n",
-    "**Departamento de Casanare:**\n",
-    "- Tauramena (85-410)\n",
-    "- Yopal (85-001)\n",
-    "- Aguazul (85-010)\n",
-    "- Nunchía (85-225)\n",
-    "- Villanueva (85-440)\n",
-    "\n",
-    "---\n",
-    "\n",
-    "## Referencias Principales\n",
-    "\n",
-    "\\[1\\] MADR, \"Evaluación Agropecuaria del Departamento del Meta y Casanare,\" Ministerio de Agricultura y Desarrollo Rural de Colombia, 2023.\n",
-    "\n",
-    "\\[2\\] J. Reiche et al., \"Combining satellite data for better tropical forest monitoring,\" *Nat. Clim. Change*, vol. 6, pp. 120–122, 2016. https://doi.org/10.1038/nclimate2919\n",
-    "\n",
-    "\\[3\\] ESA, \"Sentinel-1 User Handbook,\" European Space Agency, Tech. Rep. ESA-EOEP-CSCOP-TN-13-0001, 2013.\n",
-    "\n",
-    "\\[4\\] M. J. Canty, A. A. Nielsen, H. Skriver, and K. Conradsen, \"Statistical analysis of changes in Sentinel-1 time series on the Google Earth Engine,\" *Remote Sens.*, vol. 12, no. 1, p. 46, 2020. https://doi.org/10.3390/rs12010046\n",
-    "\n",
-    "\\[5\\] K. Conradsen, A. A. Nielsen, J. Schou, and H. Skriver, \"A test statistic in the complex Wishart distribution and its application to change detection in polarimetric SAR data,\" *IEEE Trans. Geosci. Remote Sens.*, vol. 41, no. 1, pp. 4–19, 2003. https://doi.org/10.1109/TGRS.2002.808066\n",
-    "\n",
-    "*Ver archivo `references.bib` para bibliografía completa en formato BibTeX.*"
+    "",
+    "El análisis se basa en la metodología de análisis estadístico de cambios en series temporales de Sentinel-1 propuesta por Canty et al. \\[4\\] y el test de Wishart complejo de Conradsen et al. \\[5\\].",
+    "",
+    "### Área de estudio\n",
+    "",
+    "**Departamento del Meta:**",
+    "- Puerto López (código DANE: 50-573)",
+    "- Castilla La Nueva (50-150)",
+    "- San Carlos de Guaroa (50-680)",
+    "- Cabuyaro (50-124)",
+    "",
+    "**Departamento de Casanare:**",
+    "- Tauramena (85-410)",
+    "- Yopal (85-001)",
+    "- Aguazul (85-010)",
+    "- Nunchía (85-225)",
+    "- Villanueva (85-440)",
+    "",
+    "---",
+    "",
+    "## Referencias principales\n",
+    "",
+    "\\[1\\] MADR, \"Evaluación Agropecuaria del Departamento del Meta y Casanare,\" Ministerio de Agricultura y Desarrollo Rural de Colombia, 2023.",
+    "",
+    "\\[2\\] J. Reiche et al., \"Combining satellite data for better tropical forest monitoring,\" *Nat. Clim. Change*, vol. 6, pp. 120–122, 2016. https://doi.org/10.1038/nclimate2919",
+    "",
+    "\\[3\\] ESA, \"Sentinel-1 User Handbook,\" European Space Agency, Tech. Rep. ESA-EOEP-CSCOP-TN-13-0001, 2013.",
+    "",
+    "\\[4\\] M. J. Canty, A. A. Nielsen, H. Skriver, and K. Conradsen, \"Statistical analysis of changes in Sentinel-1 time series on the Google Earth Engine,\" *Remote Sens.*, vol. 12, no. 1, p. 46, 2020. https://doi.org/10.3390/rs12010046",
+    "",
+    "\\[5\\] K. Conradsen, A. A. Nielsen, J. Schou, and H. Skriver, \"A test statistic in the complex Wishart distribution and its application to change detection in polarimetric SAR data,\" *IEEE Trans. Geosci. Remote Sens.*, vol. 41, no. 1, pp. 4–19, 2003. https://doi.org/10.1109/TGRS.2002.808066",
+    "",
+    "*Ver archivo `references.bib` para bibliografía completa en formato BibTeX.*\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. Configuración del Entorno y Carga de Librerías\n",
-    "\n",
-    "### 1.1. Instalación de Dependencias\n",
-    "\n",
-    "Para ejecutar este notebook, primero instale las dependencias necesarias:\n",
-    "\n",
-    "```bash\n",
-    "pip install earthengine-api geemap geopandas fiona matplotlib seaborn pandas numpy plotly jupyter\n",
-    "```\n",
-    "\n",
+    "## 1. Configuración del entorno y carga de librerías\n",
+    "",
+    "### 1.1. Instalación de dependencias\n",
+    "",
+    "Para ejecutar este notebook, primero instale las dependencias necesarias:",
+    "",
+    "```bash",
+    "pip install earthengine-api geemap geopandas fiona matplotlib seaborn pandas numpy plotly jupyter",
+    "```",
+    "",
     "### 1.2. Autenticación de Google Earth Engine\n",
-    "\n",
-    "**Importante**: Antes de ejecutar el notebook por primera vez, autentíquese con Google Earth Engine:\n",
-    "\n",
-    "```python\n",
-    "import ee\n",
-    "ee.Authenticate()\n",
-    "```"
+    "",
+    "**Importante**: Antes de ejecutar el notebook por primera vez, autentíquese con Google Earth Engine:",
+    "",
+    "```python",
+    "import ee",
+    "ee.Authenticate()",
+    "```\n",
+    "\n"
    ]
   },
   {
